--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Kumbara</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_please_select_your_preferred_currency_to_get_started">Hello! Please select your preferred currency to get started.</string>
+    <string name="get_started">Get Started</string>
 </resources>
