--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello_please_select_your_preferred_currency_to_get_started">Hello! Please select your preferred currency to get started.</string>
     <string name="get_started">Get Started</string>
+    <string name="saving_goals">Saving Goals</string>
+    <string name="new_goal">New Goal</string>
 </resources>
