--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="get_started">Get Started</string>
     <string name="saving_goals">Saving Goals</string>
     <string name="new_goal">New Goal</string>
+    <string name="no_saving_goals_set">No Saving Goals Set.</string>
 </resources>
