--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="target_amount">Target Amount</string>
     <string name="goal_title">Goal Title</string>
     <string name="you_don_t_have_to_see_the_whole_staircase_just_ntake_the_first_step_martin_luther_king_jr">You don\'t have to see the whole staircase, just \ntake the first step. -Martin Luther King, Jr.</string>
+    <string name="enter_amount">Enter Amount</string>
+    <string name="awesome_enter_amount">Awesome! enter amount</string>
 </resources>
