added functionality to withdraw and delete button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="you_don_t_have_to_see_the_whole_staircase_just_ntake_the_first_step_martin_luther_king_jr">You don\'t have to see the whole staircase, just \ntake the first step. -Martin Luther King, Jr.</string>
     <string name="enter_amount">Enter Amount</string>
     <string name="awesome_enter_amount">Awesome! enter amount</string>
+    <string name="cool_enter_amount">Cool! enter amount</string>
 </resources>
